--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,20 +79,18 @@
   margin: 0;
 }
 
+
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
+  background: #121212;
 }
 
 a {
@@ -104,4 +102,9 @@ a {
   html {
     color-scheme: dark;
   }
+  body {
+    color: rgb(var(--foreground-rgb));
+    background: #121212;
+  }
+  
 }
